--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="white" id="theme-color-meta"/>
-    <meta name="description" content="Chat with AI!"/>
+    <meta name="description" content="Chat with Llama 2!"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/ba61bf12e9.js" crossorigin="anonymous"></script>
